--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="header-content-inner">
             <h1>The Online Portfolio Of Lewis Joyeux</h1>
             <hr>
-            <p></p>
+            <p>text</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
