--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
+                <h2 class="section-heading">Hey, Welcome Im Lewis Joyeux</h2>
                 <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                <p class="text-faded">i'm a 3D artist with experience in modelling, UV mapping, Texturing, lighting, animation and rendering. I enjoy every aspect of 3D modelling whether thats realistic, cartoony or stylized projects. I especialy enjoy creating objects and scenes for videogames as thats what i studied in college for 2 years and now im currently at university</p>
                 <a href="#" class="btn btn-default btn-xl">Get Started!</a>
             </div>
         </div>
