--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <img src="https://images.theconversation.com/files/93616/original/image-20150902-6700-t2axrz.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1000&fit=clip"style="width: 50px; height: 50px;>
+                    <img src="https://images.theconversation.com/files/93616/original/image-20150902-6700-t2axrz.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1000&fit=clip"style=width: 90px; height: 90px; >
                     <h3>Blender</h3>
                     <p class="text-muted">for 3d modelling, uv mapping, texturing, rendering ect.</p>
                 </div>
