--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <img src="https://download.cnet.com/a/img/catalog/2019/03/27/8e3c011b-baa7-4ec0-828c-1d7edbf15135/imgingest-117282662264850932.png"style="width: 120px;" style="height: 120;">
+                    <img src="https://1000logos.net/wp-content/uploads/2020/08/Blender-Emblem.jpg"style="width: 120px;" style="height: 120;">
                     <h3>Blender</h3>
                     <p class="text-muted">for 3d modelling, uv mapping, texturing, rendering ect.</p>
                 </div>
