--- a/_includes/services.html
+++ b/_includes/services.html
@@ -18,7 +18,7 @@
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Adobe_Photoshop_CC_icon.svg/1200px-Adobe_Photoshop_CC_icon.svg.png"style="width: 120px;" style="height: 120;">
                     <h3>Photoshop</h3>
                     <p class="text-muted">to create custom textures, make texture seemless and compositing final renders</p>
                 </div>
