--- a/_includes/services.html
+++ b/_includes/services.html
@@ -25,14 +25,14 @@
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <img src="http://www.boxx.com/Files/Images/icons-3ds.png"style="width: 120px;" style="height: 120;">
                     <h3>Autodesk 3ds max</h3>
                     <p class="text-muted">to do any architextural work</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <img src="https://www.saashub.com/images/app/service_logos/19/bdc115b68a42/large.png?1542166805"style="width: 120px;" style="height: 120;">
                     <h3>crazyBump</h3>
                     <p class="text-muted">to create normal maps and height maps</p>
                 </div>
