--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -6,11 +6,8 @@
                     <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
                             <div class="project-name">
-                                Project Name
+                                Realistic Cycles Renders
                             </div>
                         </div>
                     </div>
@@ -21,11 +18,8 @@
                     <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
                             <div class="project-name">
-                                Project Name
+                                Unrealistic EEVEE Renders
                             </div>
                         </div>
                     </div>
@@ -36,11 +30,8 @@
                     <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
                             <div class="project-name">
-                                Project Name
+                                Game Assets
                             </div>
                         </div>
                     </div>
