--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -19,7 +19,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Unrealistic EEVEE Renders
+                                EEVEE Renders
                             </div>
                         </div>
                     </div>
@@ -42,11 +42,8 @@
                     <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
                             <div class="project-name">
-                                Project Name
+                                cycles Animations
                             </div>
                         </div>
                     </div>
@@ -57,11 +54,8 @@
                     <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
                             <div class="project-name">
-                                Project Name
+                                EEVEE Animations
                             </div>
                         </div>
                     </div>
@@ -72,11 +66,8 @@
                     <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
                             <div class="project-name">
-                                Project Name
+                                ??
                             </div>
                         </div>
                     </div>
