--- a/_includes/services.html
+++ b/_includes/services.html
@@ -10,8 +10,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <img src="https://1000logos.net/wp-content/uploads/2020/08/Blender-Emblem.jpg wow tada"style="width: 120px;" style="height: 120;">
+                <div class="service-box wow tada">
+                    <img src="https://1000logos.net/wp-content/uploads/2020/08/Blender-Emblem.jpg"style="width: 120px;" style="height: 120;">
                     <h3>Blender</h3>
                     <p class="text-muted">for 3d modelling, uv mapping, texturing, rendering ect.</p>
                 </div>
