--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Software i use</h2>
+                <h2 class="section-heading">Software I Use</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -13,28 +13,28 @@
                 <div class="service-box wow bounceIn">
                     <img src="https://1000logos.net/wp-content/uploads/2020/08/Blender-Emblem.jpg"style="width: 120px;" style="height: 120;">
                     <h3>Blender</h3>
-                    <p class="text-muted">for 3d modelling, uv mapping, texturing, rendering ect.</p>
+                    <p class="text-muted">For 3d modelling, uv mapping, texturing, rendering ect.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box wow bounceIn">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Adobe_Photoshop_CC_icon.svg/1200px-Adobe_Photoshop_CC_icon.svg.png"style="width: 85px;" style="height: 85;">
                     <h3>Photoshop</h3>
-                    <p class="text-muted">to create custom textures, make texture seemless and compositing final renders</p>
+                    <p class="text-muted">To create custom textures, make texture seemless and compositing final renders.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box wow bounceIn">
                     <img src="http://www.boxx.com/Files/Images/icons-3ds.png"style="width: 170px;" style="height: 170;">
                     <h3>Autodesk 3ds max</h3>
-                    <p class="text-muted">to do any architextural work</p>
+                    <p class="text-muted">To do any architextural work.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box wow bounceIn">
                     <img src="https://www.saashub.com/images/app/service_logos/19/bdc115b68a42/large.png?1542166805"style="width: 85px;" style="height: 85;">
                     <h3>crazyBump</h3>
-                    <p class="text-muted">to create normal maps and height maps</p>
+                    <p class="text-muted">To create normal maps and height maps.</p>
                 </div>
             </div>
         </div>
