--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>The Online Portfolio Of Lewis Joyeux</h1>
+            <h1>The Online Portfolio Of Lewis Joyeu</h1>
             <hr>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
