--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -51,7 +51,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.png" class="img-responsive" alt="">
+                    <source src="img/portfolio/eeveeAnimation.mp4" type="video/mp4" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
