--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -51,7 +51,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <video controls loop>
+                    <video controls loop autoplay>
                         <source src="img/portfolio/eeveeAnimation.mp4" type="video/mp4" alt="">
                     </video>
                     <div class="portfolio-box-caption">
