--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -27,7 +27,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.png" class="img-responsive" alt="">
+                    <img src="img/portfolio/Realistic.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -39,7 +39,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.png" class="img-responsive" alt="">
+                    <img src="img/portfolio/Realistic.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -65,7 +65,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.png" class="img-responsive" alt="">
+                    <img src="img/portfolio/Realistic.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
