--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -39,7 +39,9 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/Realistic.png" class="img-responsive" alt="">
+                    <video width="633" height="356" controls autoplay loop muted>
+                        <source src="img/portfolio/cyclesAnimation.mp4" type="video/mp4" alt="">
+                    </video>
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
