--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <video width="633" height="356" controls autoplay loop muted>
+                    <video width="100%" height="auto" controls autoplay loop muted>
                         <source src="img/portfolio/cyclesAnimation.mp4" type="video/mp4" alt="">
                     </video>
                     <div class="portfolio-box-caption">
@@ -53,7 +53,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <video width="633" height="356" controls autoplay loop muted>
+                    <video width="100%" height="auto" controls autoplay loop muted>
                         <source src="img/portfolio/eeveeAnimation.mp4" type="video/mp4" alt="">
                     </video>
                     <div class="portfolio-box-caption">
