--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="realisticCycles/single.html" class="portfolio-box">
+                <a href="realisticCycles/cyclesRenders.html" class="portfolio-box">
                     <img src="img/portfolio/Realistic.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -14,7 +14,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="realisticCycles/eeveeRenders.html" class="portfolio-box">
                     <img src="img/portfolio/EEVEE.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -26,7 +26,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="realisticCycles/gameAssets.html" class="portfolio-box">
                     <img src="img/portfolio/Realistic.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -38,7 +38,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="realisticCycles/cyclesAnimations.html" class="portfolio-box">
                     <video width="100%" height="auto" controls autoplay loop muted>
                         <source src="img/portfolio/cyclesAnimation.mp4" type="video/mp4" alt="">
                     </video>
@@ -52,7 +52,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="realisticCycles/eeveeAnimations.html" class="portfolio-box">
                     <video width="100%" height="auto" controls autoplay loop muted>
                         <source src="img/portfolio/eeveeAnimation.mp4" type="video/mp4" alt="">
                     </video>
