--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,22 +1,19 @@
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 /*===== VARIABLES CSS =====*/
-:root{
-  --header-height: 3rem;
-
-  /*===== Colors =====*/
-  --first-color: #FCA4A6;
-  --first-color-dark: #C1576A;
-  --first-color-darken: #A83E51;
-  --white-color: #FCF8F8;
-  
-  /*===== Font and typography =====*/
-  --body-font: 'Poppins', sans-serif;
-  --big-font-size: 2.5rem;
-  --normal-font-size: .938rem;
-  
-  /*===== z index =====*/
-  --z-fixed: 100;
+:root {
+    --header-height: 3rem;
+    /*===== Colors =====*/
+    --first-color: #686868;
+    --first-color-dark: #C1576A;
+    --first-color-darken: #A83E51;
+    --white-color: #FCF8F8;
+    /*===== Font and typography =====*/
+    --body-font: 'Poppins', sans-serif;
+    --big-font-size: 2.5rem;
+    --normal-font-size: .938rem;
+    /*===== z index =====*/
+    --z-fixed: 100;
 }
 
 @media screen and (min-width: 768px){
