--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,8 +5,8 @@
     --header-height: 3rem;
     /*===== Colors =====*/
     --first-color: #000000;
-    --first-color-dark: #C1576A;
-    --first-color-darken: #A83E51;
+    --first-color-dark: #404040;
+    --first-color-darken: #808080;
     --white-color: #FCF8F8;
     /*===== Font and typography =====*/
     --body-font: 'Poppins', sans-serif;
@@ -78,22 +78,23 @@ img{
 .nav{
   height: var(--header-height);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
 @media screen and (max-width: 768px){
-  .nav__menu{
-    position: fixed;
-    top: 0;
-    right: -100%;
-    width: 70%;
-    height: 100%;
-    padding: 3.5rem 1.5rem 0;
-    background: rgba(255,255,255,.3);
-    backdrop-filter: blur(10px);
-    transition: .5s;
-  }
+    .nav__menu {
+        position: center;
+        top: 0;
+        right: -100%;
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        background: rgba(255,255,255,.3);
+        backdrop-filter: blur(10px);
+        transition: .5s;
+        align-items: center;
+    }
 }
 
 .nav__close{
@@ -192,9 +193,10 @@ img{
     display: none;
   }
 
-  .nav__list{
-    display: flex;
-  }
+    .nav__list {
+        display: flex;
+        align-items: center;
+    }
 
   .nav__item{
     margin-left: 3rem;
