--- a/About.css
+++ b/About.css
@@ -3,116 +3,125 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 917px;
+  min-height: 985px;
+}
+
+.u-section-1 .u-image-1 {
+  width: 680px;
+  height: 945px;
+  object-position: 100% 60.93%;
+  margin: 40px auto 0 -33px;
 }
 
 .u-section-1 .u-text-1 {
   font-size: 6rem;
   line-height: 1.2;
   font-weight: 700;
-  margin: 104px 0 0 584px;
-}
-
-.u-section-1 .u-image-1 {
-  width: 585px;
-  height: 813px;
-  object-position: 100% 60.93%;
-  margin: -230px auto 0 37px;
+  margin: -956px 0 0 647px;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 1rem;
   line-height: 2.2;
   font-weight: 400;
-  margin: -523px 23px 60px 659px;
+  margin: 56px 0 0 778px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-text-1 {
-    margin-top: 84px;
-    margin-right: 100px;
-    margin-left: 484px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 921px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 466px;
-    height: 1009px;
+    width: 542px;
+    height: 847px;
+    object-position: 0% 60.93%;
     transition-duration: 0.5s;
     transform: translateX(10px) translateY(0px) scale(1);
-    margin-top: -573px;
-    margin-left: 20px;
+    margin-top: 53px;
+    margin-left: -23px;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-left: 584px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: -392px;
-    margin-right: 100px;
-    margin-left: 582px;
+    width: auto;
+    margin-top: 134px;
+    margin-right: -12px;
+    margin-left: 596px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-text-1 {
-    margin-right: 210px;
-    margin-left: 374px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 958px;
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: -1033px;
-    margin-left: 130px;
+    width: 383px;
+    height: 829px;
+    margin-top: 42px;
+    margin-left: -3px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-left: 410px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 68px;
-    margin-right: 210px;
-    margin-left: 472px;
+    margin-top: 217px;
+    margin-right: 0;
+    margin-left: 357px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 854px;
-  }
-
-  .u-section-1 .u-text-1 {
-    width: auto;
-    margin-top: -33px;
-    margin-right: 389px;
-    margin-left: 300px;
+    min-height: 1020px;
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: -1605px;
-    margin-left: 220px;
+    width: 360px;
+    height: 711px;
+    object-position: 0% 0%;
+    margin-top: -59px;
+    margin-left: -80px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 3.125rem;
+    margin-top: -846px;
+    margin-left: 270px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 640px;
-    margin-right: 300px;
-    margin-left: 382px;
+    margin-top: 249px;
+    margin-right: -19px;
+    margin-left: 235px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 576px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 446px;
-    margin-left: 400px;
-    margin-right: 400px;
+    min-height: 729px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 340px;
-    height: 736px;
-    margin-top: -2165px;
-    margin-left: 400px;
+    margin-top: -112px;
+    margin-left: -124px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 2.5rem;
+    margin-top: -552px;
+    margin-left: 170px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 1473px;
-    margin-left: 400px;
-    margin-right: 400px;
+    font-size: 0.75rem;
+    margin: 40px -41px 60px 170px;
   }
 }
