--- a/Work.css
+++ b/Work.css
@@ -1,20 +1,11 @@
  .u-section-1 {
   background-image: none;
-  min-height: 1512px;
-}
-
-.u-section-1 .u-text-1 {
-  font-size: 4.0625rem;
-  line-height: 1;
-  font-family: Oswald, sans-serif;
-  font-weight: 400;
-  text-shadow: 2px 0 0 rgba(0,0,0,0);
-  margin: 100px auto 0;
+  min-height: 1132px;
 }
 
 .u-section-1 .u-gallery-1 {
   height: 1132px;
-  margin-top: 100px;
+  margin-top: 0;
   margin-bottom: 0;
   grid-gap: 17px 17px;
 }
@@ -66,19 +57,9 @@
   padding: 20px;
 }
 
-.u-section-1 .u-text-2 {
-  width: 542px;
-  margin: 30px auto 60px;
-}
-
-.u-section-1 .u-btn-1 {
-  border-style: none none solid;
-  padding: 0;
-}
-
 @media (max-width: 1199px) {
    .u-section-1 {
-    min-height: 1313px;
+    min-height: 933px;
   }
 
   .u-section-1 .u-gallery-1 {
@@ -88,7 +69,7 @@
 
 @media (max-width: 991px) {
    .u-section-1 {
-    min-height: 1988px;
+    min-height: 1608px;
   }
 
   .u-section-1 .u-gallery-1 {
@@ -102,7 +83,7 @@
 
 @media (max-width: 767px) {
    .u-section-1 {
-    min-height: 5204px;
+    min-height: 4824px;
   }
 
   .u-section-1 .u-gallery-1 {
@@ -112,27 +93,14 @@
   .u-section-1 .u-gallery-inner-1 {
     grid-template-columns: repeat(1, auto);
   }
-
-  .u-section-1 .u-text-2 {
-    width: 540px;
-  }
 }
 
 @media (max-width: 575px) {
    .u-section-1 {
-    min-height: 3417px;
-  }
-
-  .u-section-1 .u-text-1 {
-    font-size: 3rem;
+    min-height: 3037px;
   }
 
   .u-section-1 .u-gallery-1 {
-    margin-top: 196px;
     height: 3037px;
-  }
-
-  .u-section-1 .u-text-2 {
-    width: 340px;
   }
 }
